# LDLHOL

./: CMakeLists.txt  README.md  tests.cpp
demos/: CMakeLists.txt
demos/Arcanum/: Art.cpp  CMakeLists.txt  Managers.cpp  Objects.cpp  Structs.cpp  Structs.hpp  main.cpp
demos/Fallout/: CMakeLists.txt  Engine.cpp  Engine.hpp  FrmFrmt.hpp  FrmRead.cpp  FrmRead.hpp  PalLoad.cpp  PalLoad.hpp  PathMngr.cpp  PathMngr.hpp  SprLoad.cpp  SprLoad.hpp  SprMngr.cpp  SprMngr.hpp  Sprite.cpp  Sprite.hpp  Structs.cpp  Structs.hpp  main.cpp
examples/: CMakeLists.txt
examples/DOS/: 04Clear.cpp  CMakeLists.txt
examples/Lessons/: 01Window.cpp  02Render.cpp  03Fps.cpp  04Clear.cpp  05Img.cpp  06Surf.cpp  07Move.cpp  CMakeLists.txt
examples/OpenGL1/: 01_GL1_ScreenColor.cpp  CMakeLists.txt
examples/OpenGL3/: 01_GL3_Triangle.cpp  CMakeLists.txt
include/LDL/: Alpha.hpp  Assert.hpp  BaseRndr.hpp  BaseWin.hpp  BmpLoad.hpp  ByteRead.hpp  Bytes.hpp  Chars.hpp  Color.hpp  Config.hpp  Conv.hpp  Enums.hpp  EventQ.hpp  EventW.hpp  Events.hpp  FpsCount.hpp  LDL.hpp  MemRead.hpp  Palette.hpp  Reader.hpp  Result.hpp  Surface.hpp  Test.hpp  Vec2i.hpp
include/LDL/DOS/: Console.hpp  FileStrm.hpp  MainWin.hpp  SoftWin.hpp  Terminat.hpp  Ticks.hpp
include/LDL/OpenGL/: Funcs.hpp  GLFuncs.hpp  Mat4f.hpp  OpenGL.hpp  UtilGL.hpp
include/LDL/Renders/: GL1Rndr.hpp  GL1Tex.hpp  GL3Rndr.hpp  SoftRndr.hpp  SoftTex.hpp
include/LDL/UNIX/: Console.hpp  GL1Win.hpp  GLFuncs.hpp  Library.hpp  MainWin.hpp  (+2 more)
make/: build.bat  mingw_build.bat  mingw_gl1.bat  mingw_soft.bat
make/fallout/: mingw.bat
(+11 files in other folders)
